style change to fix misaligned schedule

--- a/client/src/pages/profile/profile.styles.css
+++ b/client/src/pages/profile/profile.styles.css
@@ -55,7 +55,7 @@
 }
 
 .profile-schedule-container{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
